# bscribe

./: CMakeLists.txt  ChangeLog.txt  IDEAS.txt  LICENSE.txt  README.txt
examples/dom/: dom_echo.c
examples/event/: event_echo.c  event_parser.c
examples/list/: list_add.c
fuzzer/: fuzzer-bscribe_read.c
fuzzer/corpus/: CentOS-8.2.2004-x86_64-dvd1.torrent  NOOBS_v3_2_1.zip.torrent  debian-10.5.0-amd64-DVD-1.iso.torrent  linuxmint-19.2-cinnamon-32bit.iso.torrent
src/include/: bscribe.h
src/libbscribe/: dict_clear.c  dict_copy.c  dict_create.c  dict_destroy.c  dict_get.c  dict_iterate.c  dict_iterate_keys.c  dict_iterate_ordered.c  dict_length.c  dict_remove.c  dict_set.c  instream_buffer_init.c  instream_buffer_read.c  instream_fd_init.c  instream_fd_read.c  instream_from_buffer.c  instream_from_stdio.c  instream_stdio_init.c  instream_stdio_read.c  int_copy.c  int_create.c  int_create_i32.c  int_create_i64.c  int_create_u32.c  int_destroy.c  int_get_i32.c  int_get_i64.c  int_get_u32.c  int_get_u64.c  int_init.c  int_init_i32.c  int_init_i64.c  int_init_u32.c  int_set_i32.c  int_set_i64.c  int_set_u32.c  internal.h  list_add.c  list_clear.c  list_copy.c  (+37 more)
tests/: list_add.c  list_create.c
